[OG-3] Категория: доработаны все методы
