# app/Http/Controllers/Api/V1/CategoryController.php
@@ -4,13 +4,18 @@ declare(strict_types=1);
 
 namespace App\Http\Controllers\Api\V1;
 
+use App\DTO\Category\CategoryDTO;
+use App\Filters\CategoryFilter;
 use App\Handlers\CreateCategory\CreateCategoryHandler;
+use App\Handlers\DeleteCategory\DeleteCategoryHandler;
 use App\Handlers\UpdateCategory\UpdateCategoryHandler;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\CategoryCreateRequest;
 use App\Http\Requests\CategoryUpdateRequest;
+use App\Http\Resources\CategoryResource;
 use App\Models\Category\Category;
 use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Request;
 use Throwable;
 
 /**
@@ -18,6 +23,87 @@ use Throwable;
  */
 final class CategoryController extends Controller
 {
+    /**
+     * @OA\GET (
+     *      path="/v1/categories",
+     *      operationId="getCategories",
+     *      tags={"v1", "admin"},
+     *      summary="Список категорий",
+     *      description="Список категорий",
+     *      @OA\Response(response=200, description="Успешно получены"),
+     *      @OA\Response(response=400, description="Что-то не так")
+     * )
+     * @param Request $request
+     * @param CategoryFilter $filters
+     * @return JsonResponse
+     * @psalm-suppress UndefinedMagicMethod
+     */
+    public function getCategories(Request $request, CategoryFilter $filters): JsonResponse
+    {
+        $categories = Category::filter($filters)
+            ->orderBy('id')
+            ->paginate($request->get('limit', 10));
+
+        return $this->response('Успешно получены', [
+            'items' => CategoryResource::collection($categories),
+            'pagination' => [
+                'total_pages' => $categories->lastPage(),
+                'total_items' => $categories->total(),
+                'current_page' => $categories->currentPage(),
+                'limit' => $categories->perPage(),
+            ],
+        ]);
+    }
+
+    /**
+     * @OA\Get (
+     *      path="/v1/categories/search",
+     *      operationId="categorySearch",
+     *      tags={"v1", "admin"},
+     *      summary="Поиск по названию категорий",
+     *      description="Поиск по названию категорий",
+     *      parameters={
+     *        {"name": "search","in":"query","type":"string","required":true,"description":"Value"},
+     *      },
+     *      @OA\Response(
+     *          response=200,
+     *          description="Успешно получены",
+     *          @OA\JsonContent(ref="#/components/schemas/CategoryResource"),
+     *      ),
+     *      @OA\Response(response=400, description="Что-то не так")
+     * )
+     * @param Request $request
+     * @return JsonResponse
+     */
+    public function categorySearch(Request $request): JsonResponse
+    {
+        $categories = Category::where('title', 'ilike', '%'.$request->get('search').'%')->get();
+
+        return $this->response('Успешно получены', CategoryResource::collection($categories));
+    }
+
+    /**
+     * @OA\GET (
+     *      path="/v1/categories/{category}",
+     *      operationId="getCategoryById",
+     *      tags={"v1", "admin"},
+     *      summary="Получить категорию по ID",
+     *      description="Получить категорию по ID",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Данные по категории",
+     *          @OA\JsonContent(ref="#/components/schemas/CategoryResource")
+     *      ),
+     *      @OA\Response(response=400, description="Что-то не так")
+     * )
+     * @param Category $category
+     * @return JsonResponse
+     */
+    public function getCategoryById(Category $category): JsonResponse
+    {
+        return $this->response('Данные по категорию', new CategoryResource($category));
+    }
+
     /**
      * @OA\Post (
      *      path="/v1/categories",
@@ -81,5 +167,31 @@ final class CategoryController extends Controller
         $handler->handle($categoryDTO);
 
         return $this->response('Категория успешно изменена');
+    }
+
+    /**
+     * @OA\Delete  (
+     *      path="/v1/categories/{category}",
+     *      operationId="deleteCategory",
+     *      tags={"v1", "admin"},
+     *      summary="Удалить категорию",
+     *      description="Удалить категорию",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Категория успешно удалена",
+     *      ),
+     *      @OA\Response(response=400, description="Что-то не так")
+     * )
+     * @param Category $category
+     * @param DeleteCategoryHandler $handler
+     * @return JsonResponse
+     * @throws Throwable
+     */
+    public function deleteCategory(Category $category, DeleteCategoryHandler $handler): JsonResponse
+    {
+        $categoryDTO = CategoryDTO::fromArray(['category_id' => $category->id]);
+        $handler->handle($categoryDTO);
+
+        return $this->response('Категория успешно удалена');
     }
 }
